[package]
name        = "statsd-parser"
version     = "0.3.0"
authors     = ["Robert Beekman <robert@appsignal.com>"]
description = "Library to parse (Dog)StatsD strings"
readme      = "README.md"
repository  = "https://github.com/appsignal/statsd_parser"
keywords    = ["statsd", "lexer", "dogstatsd"]
license     = "MIT/Apache-2.0"

[dependencies]
